add_executable(tcp-publisher)
target_sources(tcp-publisher
  PRIVATE
  TcpPublisher.cpp
  MessageGenerator.cpp
  Proto.cpp
)
target_link_libraries(tcp-publisher
  PRIVATE
  liburing::liburing
)

add_executable(udp-publisher)
target_sources(udp-publisher
  PRIVATE
  UdpPublisher.cpp
  MessageGenerator.cpp
  Proto.cpp
)
target_link_libraries(udp-publisher
  PRIVATE
  liburing::liburing
)

add_executable(tcp-subscriber)
target_sources(tcp-subscriber
  PRIVATE
  TcpSubscriber.cpp
  Proto.cpp
)
target_link_libraries(tcp-subscriber
  PRIVATE
  liburing::liburing
)

add_executable(tcp-broker)
target_sources(tcp-broker
  PRIVATE
  TcpBroker.cpp
  Proto.cpp
)
target_link_libraries(tcp-broker
  PRIVATE
  liburing::liburing
)

add_executable(udp-broker)
target_sources(udp-broker
  PRIVATE
  UdpBroker.cpp
  Proto.cpp
)
target_link_libraries(udp-broker
  PRIVATE
  liburing::liburing
)

add_executable(udp-subscriber)
target_sources(udp-subscriber
  PRIVATE
  UdpSubscriber.cpp
  Proto.cpp
)
target_link_libraries(udp-subscriber
  PRIVATE
  liburing::liburing
)
