add_library(proto)
target_sources(proto
  PRIVATE
  Proto.cpp
)

add_executable(tcp-publisher)
target_sources(tcp-publisher
  PRIVATE
  TcpPublisher.cpp
  MessageGenerator.cpp
)
target_link_libraries(tcp-publisher
  PRIVATE
  proto
  liburing::liburing
)

add_executable(udp-publisher)
target_sources(udp-publisher
  PRIVATE
  UdpPublisher.cpp
  MessageGenerator.cpp
)
target_link_libraries(udp-publisher
  PRIVATE
  proto
  liburing::liburing
)

add_executable(tcp-subscriber)
target_sources(tcp-subscriber
  PRIVATE
  TcpSubscriber.cpp
)
target_link_libraries(tcp-subscriber
  PRIVATE
  proto
  liburing::liburing
)

add_executable(tcp-broker)
target_sources(tcp-broker
  PRIVATE
  TcpBroker.cpp
)
target_link_libraries(tcp-broker
  PRIVATE
  proto
  liburing::liburing
)

add_executable(udp-broker)
target_sources(udp-broker
  PRIVATE
  UdpBroker.cpp
)
target_link_libraries(udp-broker
  PRIVATE
  proto
  liburing::liburing
)

add_executable(udp-subscriber)
target_sources(udp-subscriber
  PRIVATE
  UdpSubscriber.cpp
)
target_link_libraries(udp-subscriber
  PRIVATE
  proto
  liburing::liburing
)
